--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,25 +8,15 @@ on:
 jobs:
   update-website:
     runs-on: ubuntu-latest
-    
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-
-      - name: Copy website files
-        run: cp -r ./website/* ./temp
-
-      - name: Switch to website branch
-        run: git checkout website
-
-      - name: Add and commit changes
+      - uses: actions/checkout@v2
+      - name: Copy website folder into website branch
         run: |
-          git config --global user.email "actions@github.com"
-          git config --global user.name "GitHub Actions"
-          git add .
-          git commit -m "Update website"
-        
-      - name: Push changes to website branch
-        uses: ad-m/github-push-action@master
-        with:
-          branch: website
+          git config --global user.name 'GitHub Action'
+          git config --global user.email 'action@github.com'
+          git fetch
+          git checkout 'website'
+          git checkout main -- 'website'
+          git add -A
+          git diff-index --quiet HEAD || git commit -am
+          git push origin 'website'
