--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,9 +15,8 @@ jobs:
           git config --global user.name 'GitHub Action'
           git config --global user.email 'action@github.com'
           git fetch
-          files=$(find 'website')
-          git checkout 'website' --
-          git checkout 'main' -- $files
+          git rm -r .
+          git checkout 'main' -- 'website'
           git add -A
           git diff-index --quiet HEAD ||  git commit -am "update website"
           git push origin 'website'
