--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,7 @@ jobs:
           git config --global user.name 'GitHub Action'
           git config --global user.email 'action@github.com'
           git fetch
+          git checkout 'website' --
           git rm -r .
           git checkout 'main' -- 'website'
           git add -A
